--- a/case-studies/posts/2023/05/XX/04-second-place-winners.qmd
+++ b/case-studies/posts/2023/05/XX/04-second-place-winners.qmd
@@ -19,7 +19,7 @@ format:
 DeepFFTLink team members: Yang Wu and Kai Zhang are PhD students at Worcester Polytechnic Institute. Aishwarya Budhkar is a PhD student at Indiana University Bloomington. Xuhong Zhang is an assistant professor at Indiana University Bloomington. Xiaozhong Liu is an associate professor at Worcester Polytechnic Institute.
 
 ## Perspective on the challenge 
-Text matching is an essential task in natural language processing (NLP) **[1]**, while record linkage across different sources is an essential task in data science. Machine learning techniques allow people to combine data faster and cheaper than using manual linkage. However, in the context of the Food for Thought challenge, existing methods for matching universal product codes (UPCs) to ensemble codes (ECs) require every UPC to be compared with every EC code (Figure 1a). Such approaches can be computationally expensive in the training process when data is noisy. Here, we propose an ensemble model with a category-based adapter to tackle this problem. The category-based adapter allows UPCs to be first matched with only a small and reliable set of ECs (Figure 1b). Then, an ensemble model will be deployed to make predictions for UPC-EC matching. Our proposed approach can achieve competitive performance compared with state-of-art models.
+Text matching is an essential task in natural language processing (NLP) **[1]**, while record linkage across different sources is an essential task in data science. Machine learning techniques allow people to combine data faster and cheaper than using manual linkage. However, in the context of the Food for Thought challenge, existing methods for matching universal product codes (UPCs) to ensemble codes (ECs) require every UPC to be compared with every EC code (Figure 1a). Such approaches can be computationally expensive in the training process when data is noisy. Here, we propose an ensemble model with a category-based adapter to tackle this problem. The category-based adapter allows UPCs to be first matched with only a small and reliable set of ECs (Figure 1b). Then, an ensemble model will be deployed to make predictions for UPC-EC matching. Our proposed approach can achieve competitive performance compared with state-of-the-art models.
 
 :::{layout-ncol=2 style="padding-top: 1em; margin-bottom: 0;"}
 [![(a)](images/pt4-fig1a.png)](images/pt4-fig1a.png)
@@ -38,7 +38,7 @@ We propose a two-step framework to address this problem. To begin with, we use a
 By using 2015--2016 UPC-EC data, we created a knowledge base, which is a UPC category--EC pair-wised table for generating candidate ECs. Within this setting, each UPC category is, on average, related to only 32 ECs. This knowledge base is then used as context to further filter the candidate ECs. Note that there are some new ECs generated year by year, which can also be part of the potential ECs in the UPC-EC matching task, since the contextual information of new ECs does not exist in our knowledge base. 
 
 ##### Ensembled model
-We ensemble the base-string match and BERT **[3]** models. BERT is a deep learning model for natural language processing. In the base-string match model, we used the Term Frequency-Inverse Document Frequency (TFIDF) of each UPC and EC description as features to calculate a pairwise cosine similarity, which is a distance between instances. Meanwhile, we used features extracted from UPC and EC descriptions to fine-tune the BERT base model and calculated the cosine similarity of embeddings between each UPC and EC. Then we rank ECs based on the their similarity scores with the UPC.
+We ensemble the base-string match and BERT **[3]** models. BERT is a deep learning model for natural language processing. In the base-string match model, we used the Term Frequency-Inverse Document Frequency (TFIDF) of each UPC and EC description as features to calculate a pairwise cosine similarity, which is a distance between instances. Meanwhile, we used features extracted from UPC and EC descriptions to fine-tune the BERT base model and calculated the cosine similarity of embeddings between each UPC and EC. Then we rank ECs based on their similarity scores with the UPC.
 
 [![](images/pt4-fig2.png)](images/pt4-fig2.png)
 
@@ -66,9 +66,7 @@ Our next step will focus on adding the newly generated EC data into our knowledg
 ## Lessons learned 
 1. **If the data is not complex, simple models may outperform complex models.** For example, in our experiment, we found that the base-string model outperforms single RoBERTa **[4]** or BERT models. However, our ensemble model can outperform each individual model since model fusion allows information aggregation from multiple models. 
 
-2. **Multi-label models may not work well on UPC-EC data.** In our early work, we tried to consider the UPC-EC matching task as a multi-label problem, e.g., we labeled each EC as a binary label which indicated whether the EC was an appropriate match or not. We mapped UPC and EC pairs into a multi-label table. However, we find that the UPC and EC keeps a one-to-one relation for most UPCs. The model performance of a multi-label model, i.e., Label-Specific Attention Network (LSAN) **[5]**, is lower than base-string model on both Success@5 and NDCG@5 metrics.  
-
-3. **Effective communication** with the tech team would be very helpful for environment setting during early stages.  
+2. **Multi-label models may not work well on UPC-EC data.** In our early work, we tried to consider the UPC-EC matching task as a multi-label problem, e.g., we labeled each EC as a binary label which indicated whether the EC was an appropriate match or not. We mapped UPC and EC pairs into a multi-label table. However, we find that the UPC and EC keeps a one-to-one relation for most UPCs. The model performance of a multi-label model, i.e., Label-Specific Attention Network (LSAN) **[5]**, is lower than base-string model on both Success@5 and NDCG@5 metrics. 
 
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
