--- a/case-studies/posts/2023/05/XX/03-first-place-winners.qmd
+++ b/case-studies/posts/2023/05/XX/03-first-place-winners.qmd
@@ -7,7 +7,7 @@ categories:
   # - AI ethics
   # - Culture
   # - Regulation
-author: Wenying Li, Jingyi Zheng, Shubhra Kanti Karmaker, Naman Bansal, and Alex Knipper 
+author: Alex Knipper, Naman Bansal, Jingyi Zheng, Wenying Li, and Shubhra Kanti Karmaker  
 date: 05/XX/2023
 toc: true
 # image: images/stephanie-hare-bw.png
@@ -142,7 +142,7 @@ When we evaluate that same model on the full PPC dataset we were provided (~38,0
 (Note: The full PPC dataset contains approximately 15,000 items that we used to train the model, so these scores are not as representative of our method’s performance as the previous scores.) 
 
 ## Future work/refinement 
-As mentioned previously, we only used the given 2017--2018 PPC dataset as our primary dataset for both training and testing. Going forward, we would like to inculcate datasets from previous years as well, which we believe would further increase our model performance. Additionally, the datasets generated from this research have the potential to inform and support additional studies from a variety of perspectives, including nutrition, consumer research, and public health. Further research utilizing these datasets has the potential to make significant contributions to our understanding of consumer behavior and the role of food and nutrient consumption in overall health and well-being. 
+As mentioned previously, we only used the given 2017--2018 PPC dataset as our primary dataset for both training and testing. Going forward, we would like to include datasets from previous years as well, which we believe would further increase our model performance. Additionally, the datasets generated from this research have the potential to inform and support additional studies from a variety of perspectives, including nutrition, consumer research, and public health. Further research utilizing these datasets has the potential to make significant contributions to our understanding of consumer behavior and the role of food and nutrient consumption in overall health and well-being. 
 
 ## Lessons learned 
 It was interesting that the random forest model performed better than the vanilla neural network model. This shows that a simple solution can work better, depending on the application. This observation is in line with the well-established principle in machine learning that the choice of model should be guided by the nature of the problem and the characteristics of the data. In this case, the random forest model, being a simpler and more interpretable model, was better suited to the problem at hand and was able to outperform the more complex neural network model. These results underscore the importance of careful model selection and the need to consider both the complexity of the model and the specific requirements of the problem when choosing an algorithm for a particular application. 
@@ -165,12 +165,12 @@ It was interesting that the random forest model performed better than the vanill
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
 About the authors
-: **Wenying Li**, **Jingyi Zheng**, and **Shubhra Kanti Karmaker** are assistant professors, and **Naman Bansal** and **Alex Knipper** are PhD students at Auburn University.
+: **Alex Knipper** and **Naman Bansal** are PhD students, and **Jingyi Zheng**, **Wenying Li**,  and **Shubhra Kanti Karmaker** are assistant professors at Auburn University.
 
 :::
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
-:   © 2023 Wenying Li, Jingyi Zheng, Shubhra Kanti Karmaker, Naman Bansal, and Alex Knipper
+:   © 2023 Alex Knipper, Naman Bansal, Jingyi Zheng, Wenying Li, and Shubhra Kanti Karmaker
 
 <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
 
@@ -178,7 +178,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-:   Li, Wenying, Jingyi Zheng, Shubhra Kanti Karmaker, Naman Bansal, and Alex Knipper. 2023. "Food for Thought: First place winners -- Auburn Big Data." Real World Data Science, May XX, 2023. [URL](https://realworlddatascience.net/viewpoints/case-studies/posts/2023/05/XX/03-first-place-winners.html)
+:   Knipper, Alex, Naman Bansal, Jingyi Zheng, Wenying Li, and Shubhra Kanti Karmaker. 2023. "Food for Thought: First place winners -- Auburn Big Data." Real World Data Science, May XX, 2023. [URL](https://realworlddatascience.net/viewpoints/case-studies/posts/2023/05/XX/03-first-place-winners.html)
 :::
 :::
 :::
