--- a/case-studies/posts/2023/05/XX/04-second-place-winners.qmd
+++ b/case-studies/posts/2023/05/XX/04-second-place-winners.qmd
@@ -27,6 +27,8 @@ Text matching is an essential task in natural language processing (NLP) **[1]**,
 [![(b)](images/pt4-fig1b.png)](images/pt4-fig1b.png)
 :::
 
+<!-- centre captions -->
+
 :::{.figure-caption}
 **Figure 1:** A toy example of our method. Panel (a) shows the traditional matching method, while (b) is our proposed ensemble model with category-based adapter. With the help of the adapter, UPC 1 only needs to be matched with EC 1 and EC 3.
 :::
