--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!future.qmd"
+    - "!no-AI-probably-wont-kill-us.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -123,15 +123,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/05/26/future.qmd">
+<a href="/viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## What's the future of data science and AI in an LLM world?
-Osama Rahman, director of the Data Science Campus at the UK Office for National Statistics, shared his thoughts on the past, present, and future of data science at a recent event. Here are our key takeaways.
+## No, AI probably won’t kill us all -- and there’s more to this fear campaign than meets the eye
+Last week, outlets around the world were plastered with news of yet another open letter claiming AI poses an existential threat to humankind. Michael Timothy Bennett argues that a healthy dose of scepticism is warranted when considering the 'AI doomsayer' narrative.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/05/26/images/binoculars.png)
+![](viewpoints/posts/2023/06/05/images/AlanWarburton-SocialMedia.png)
 :::
 :::
 
