1st round comments added

--- a/ts-and-cs.qmd
+++ b/ts-and-cs.qmd
@@ -13,6 +13,9 @@ Neither RWDS, its editors, the RSS, nor other partners and funders make any repr
 
 RWDS, its editors, the RSS, or other partners and funders shall not be liable for any losses or damages (including without limitation consequential loss or damage) whatsoever from the use of, or reliance on, the information in this website, or from the use of the internet generally. Links to other websites or the publication of advertisements do not constitute an endorsement or an approval by RWDS, its editors, the RSS, or other partners and funders.
 
+<!--- To add in, "By using this site you agree to these terms..." - see RSS site for guidance --->
+<!--- To add in, "Jurisdiction is..." - see RSS site --->
+
 ## Site content
 This site and the "Real World Data Science" and "RWDS" brands and logos are copyright &copy; The Royal Statistical Society.
 
@@ -114,6 +117,8 @@ an individual is officially representing the community in public spaces.
 Examples of representing our community include using an official e-mail address,
 posting via an official social media account, or acting as an appointed
 representative at an online or offline event.
+
+<!--- Clarify scope, e.g. "What is an 'appointed rep', and how does this relate to RSS conduct terms, etc.?" --->
 
 ### Enforcement
 
