--- a/viewpoints/interviews/posts/2023/06/08/london-data-week.qmd
+++ b/viewpoints/interviews/posts/2023/06/08/london-data-week.qmd
@@ -9,7 +9,7 @@ categories:
   - Communities
 author: Brian Tarran
 date: 06/08/2023
-toc: true
+toc: false
 image: images/arthur-yao-HTicW9-i4xY-unsplash.png
 image-alt: Photo of London at night, with Big Ben clock tower towering over the city. Photo by Arthur Yao on Unsplash. 
 ---
@@ -70,7 +70,7 @@ Yeah. And you mentioned there a range of events. Jen, can you give us a flavour 
 Yeah, happy to Brian. And maybe something to add to is something Sam and I were really hoping to go for is to not have, you know, maybe the typical talk or panel style format for all of our events that might be really common in a conference, but rather have different kinds of events that can focus on different kinds of activities. So having public conversations and debates, having exhibits and experiences, having resident or citizen science opportunities where people can actually be a part of creating data, and also learning opportunities if people want to upskill or learn about a concept. So to shout out some of the events I'm really excited for, maybe to start with the more wacky ones first. The Turing is hosting a "Cabaret of Dangerous Ideas" which will be a comedy show at the Camden Club where they will dig into topics like technology and data, but over a pint and through humour. So apparently, this is an 18+ show. So that might give you a little bit of a flavour of what's to come. Another event we're really excited about is an event called All the Docks, where a team of cyclists attempt this challenge in one day to hit every single Santander bike dock. They've done it before, and this year for London Data Week, they're doing a round to hit, I think, the now over 800 docks that now exist in London. And this time, for London Data Week, what they're also doing is making it a data collection exercise. So as they cross the streets of London, they'll collect data on the road conditions, the cycling infrastructure, which can be then an open data set that people can use after the event as well. So those are two that jumped to mind. I don't know, Sam, if there's anything you want to highlight, or Brian because I know there's a really exciting on that the RSS is...
 
 **Brian Tarran**  
-Yeah, I'll put a quick plug in for the, so the Royal Statistical Society are organising an event associated with our Statisticians for Society initiative, which offers pro bono support to charities under a million turnover in the UK. So I can, I'll post a link in the show notes so that people can find out more about that and sign up if they meet the criteria and are interested in taking part. But Sam, sorry, I, I hijacked there. But go ahead.
+Yeah, I'll put a quick plug in for the, so [the Royal Statistical Society are organising an event associated with our Statisticians for Society initiative](https://rss.org.uk/training-events/events/events-2023/rss-events/statisticians-for-society-london-data-week/#fulleventinfo), which offers pro bono support to charities under a million turnover in the UK. So I can, I'll post a link in the show notes so that people can find out more about that and sign up if they meet the criteria and are interested in taking part. But Sam, sorry, I, I hijacked there. But go ahead.
 
 **Sam Nutt**  
 No, Brian, I was going to only mention your event. But no, a couple of others, I think just to show the like breadth of the types of activities. So you know, for example, it's also it's about partnering with organisations who are thinking and you know, already doing things like this, so the Science Gallery, for example, there's-- they've got an exhibition called "AI: Who's looking after me?", which is, you know, looks at some of the playful ways that AI is already involved in people's lives and brings sort of people on a critical journey. That's more of that sort of art exhibition type thing. In local government, where, in LOTI, we're helping some boroughs with developing basically, a toolkit, a resource to help officers in boroughs in some of the data teams, who maybe haven't had that history of engaging with residents, as seen as more sort of technical back office staff, actually, you know, give them the confidence to go out and have a conversation with residents about some of their practice and see how they can improve it. So there's been a lot of interest there, in particular, around having conversations about how we do data linkage better, which, you know, in some ways, feels-- it's quite a straightforward data topic. But actually, the huge thing is that these teams in boroughs have never thought, we need to speak with residents at the design stage of data projects, you know, the public, what might a digitally excluded, relatively low sort of data literacy person be able to tell us about our data work that's helpful to me as, you know, a data scientist, that was sort of some of the historical thinking, but actually, we're sort of bringing boroughs on the journey of thinking, actually realising, you know, the value of doing that. So that's sort of, I guess, the range of types of things as well.
@@ -79,7 +79,7 @@ No, Brian, I was going to only mention your event. But no, a couple of others, I
 Fantastic. So where, if people do want to sign up for any of these events, is there a good way for them to do that? Is it go to the LOTI website-- not LOTI website, the London Data Week website, I'm guessing?
 
 **Jennifer Ding**  
-There is a good amount of info on both the Turing and the LOTI website, but the best place we'd suggest is londondataweek.org. There you'll find a list of events. And if you click on an event, there's more information. And also, if you click "Find out more", you can access a link for more information on how you express interest or sign up.
+There is a good amount of info on both the Turing and the LOTI website, but the best place we'd suggest is [londondataweek.org](https://www.londondataweek.org/). There you'll find a list of events. And if you click on an event, there's more information. And also, if you click "Find out more", you can access a link for more information on how you express interest or sign up.
 
 **Brian Tarran**  
 Excellent. And if people-- when we're speaking, we are almost exactly a month away from London Data Week. If someone's listening to this and they think, Oh, I've got a great idea for an event I want to organise, is it too late for them to squeeze onto the programme now? Should they get in touch somehow if, if inspiration strikes?
@@ -97,7 +97,7 @@ So far, so good, Brian.
 Yeah, we'll "no comment" some of that.
 
 **Jennifer Ding**  
-We're definitely really excited though. And if anyone does have an idea or wants to start a conversation, there's a contact form on our website, drop us an email. We also have a Twitter if you want to send us a message through that. So at the very least, we love, we'd love to chat.
+We're definitely really excited though. And if anyone does have an idea or wants to start a conversation, there's a contact form on our website, drop us an email. [We also have a Twitter](https://twitter.com/londondataweek) if you want to send us a message through that. So at the very least, we love, we'd love to chat.
 
 **Brian Tarran**  
 Great, well, we'll put all those contact details, social media accounts, etc., into the show notes so people can find you. But thank you very much for joining us today. I know this must be a very busy time for you. But Sam Nutt, Jennifer Ding, thank you for joining us and talking about the upcoming London Data Week. I'm looking forward to it.
