--- a/viewpoints/interviews/posts/01/25/erica-thompson.qmd
+++ b/viewpoints/interviews/posts/01/25/erica-thompson.qmd
@@ -12,6 +12,7 @@ image: images/erica-thompson.png
 image-alt: Photo of Erica Thompson
 aliases: 
   - /news-and-views/interviews/posts/01/25/erica-thompson.html
+  - /viewpoints/interviews/posts/01/25/erica-thompson.html
 ---
 Erica Thompson’s new book, [*Escape from Model Land*](http://www.ericathompson.co.uk/books/), offers a fascinating and important perspective on mathematical models as being not just models of the real world, or real processes or systems, but also “subjective versions of reality” that encode all sorts of assumptions and value judgements. 
 
