--- a/viewpoints/interviews/posts/03/06/data-science-act.qmd
+++ b/viewpoints/interviews/posts/03/06/data-science-act.qmd
@@ -13,6 +13,7 @@ image: images/andy-feliciotti-isg8AL7-6uk-unsplash.png
 image-alt: Bikers in front of the United States Capitol in Washington DC. Photo by Andy Feliciotti on Unsplash.
 aliases: 
   - /news-and-views/editors-blog/posts/2023/03/06/data-science-act.html
+  - /viewpoints/interviews/posts/03/06/data-science-act.html
 ---
 On February 14, 2023, a bipartisan group of US legislators introduced the [Data Science and Literacy Act](https://stevens.house.gov/media/press-releases/rep-stevens-leads-bipartisan-legislation-increase-access-data-science-and) with the goal of boosting access to data science education and building “America’s 21st century STEM workforce”. We sat down with guests Zarek Drozda, Anna Bargagliotti, Christine Franklin and Steve Pierson to discuss the news and to hear why data science education is “the new apple pie”.
 
