--- a/viewpoints/interviews/posts/04/28/stephanie-hare.qmd
+++ b/viewpoints/interviews/posts/04/28/stephanie-hare.qmd
@@ -11,7 +11,9 @@ author: Brian Tarran
 date: 04/28/2023
 toc: true
 image: images/stephanie-hare-bw.png
-image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.  
+image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
+aliases: 
+  - /viewpoints/interviews/posts/04/28/stephanie-hare.html  
 ---
 
 We're about a year late coming to [Stephanie Hare](https://www.harebrain.co/)'s book, [*Technology is Not Neutral: A Short Guide to Technology Ethics*](https://londonpublishingpartnership.co.uk/technology-is-not-neutral/). But, as discussed in our interview below, time has only made the text more relevant. The book was written pre-ChatGPT, but Hare's explorations of ethical questions in the context of facial recognition technology and Covid-19 exposure tracking apps feel both pointed and urgent at this moment, when researchers, regulators, and regular people are weighing the opportunities and potential harms of large language models and generative AI tools.
