--- a/viewpoints/interviews/posts/02/03/heidi-seibold.qmd
+++ b/viewpoints/interviews/posts/02/03/heidi-seibold.qmd
@@ -12,6 +12,7 @@ image: images/heidi-seibold.png
 image-alt: Photo of Heidi Seibold
 aliases:
   - /news-and-views/interviews/posts/02/03/heidi-seibold.html
+  - /viewpoints/interviews/posts/02/03/heidi-seibold.html
 --- 
 Years are often dedicated to different causes and aims by different organisations. The United Nations, for example, has designated 2023 the [International Year of Dialogue as a Guarantee of Peace](https://www.undocs.org/en/A/RES/77/32), while for the European Commission it is the [European Year of Skills](https://ec.europa.eu/commission/presscorner/detail/en/ip_22_6086). But over at the White House Office of Science and Technology Policy, 2023 has been declared the [Year of Open Science](https://www.whitehouse.gov/ostp/news-updates/2023/01/11/fact-sheet-biden-harris-administration-announces-new-actions-to-advance-open-and-equitable-research/). 
 
