--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!no-AI-probably-wont-kill-us.qmd"
+    - "!london-data-week.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -37,29 +37,29 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  # - id: ideas
-  #   contents: 
-  #   - /ideas
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: ideas
+    contents: 
+    - /ideas
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
-  # - id: careers
-  #   contents: 
-  #   - /careers
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: careers
+    contents: 
+    - /careers
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   # - id: viewpoints
   #   contents: 
@@ -84,17 +84,17 @@ listing:
     max-items: 3
     feed: false
 
-  - id: datasciencebites
-    contents: 
-    - /ideas/datasciencebites
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: datasciencebites
+  #   contents: 
+  #   - /ideas/datasciencebites
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   - id: interviews
     contents: 
@@ -108,30 +108,30 @@ listing:
     max-items: 3
     feed: false
 
-  - id: career-profiles
-    contents: 
-    - /careers/career-profiles
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: career-profiles
+  #   contents: 
+  #   - /careers/career-profiles
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.qmd">
+<a href="/viewpoints/interviews/posts/2023/06/08/london-data-week.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## No, AI probably won’t kill us all -- and there’s more to this fear campaign than meets the eye
-Last week, outlets around the world were plastered with news of yet another open letter claiming AI poses an existential threat to humankind. Michael Timothy Bennett argues that a healthy dose of scepticism is warranted when considering the 'AI doomsayer' narrative.
+## London Data Week is almost here. What’s it all about?
+The first ever London Data Week runs from 3–9 July 2023. Real World Data Science meets with organisers Sam Nutt and Jennifer Ding to hear about their vision and plans for the week, and a selection of activities to look forward to.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/posts/2023/06/05/images/AlanWarburton-SocialMedia.png)
+![](viewpoints/interviews/posts/2023/06/08/images/arthur-yao-HTicW9-i4xY-unsplash.png)
 :::
 :::
 
@@ -170,6 +170,48 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
+## This feels like a brand-new capability – an interface with unstructured information. Historically, you have to turn text into something, and then turn something back into text, if you want to have this interface with humans. Now, we’ve got this elegant way of plugging the gaps.
+Data science leaders on the transformative impact of ChatGPT 
+
+::: {.button}
+[Join the discussion](careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd)
+:::
+
+:::
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="ideas/index.qmd">
+
+## Data Science Ideas
+</a> 
+
+::: {#ideas}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="careers/index.qmd">
+
+## Data Science Careers 
+</a>
+
+::: {#careers}
+:::
+
+:::
+:::
+
+::: {.pullout-text}
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
 ## [Laws and regulations] are important, they’re necessary, but they’re insufficient. You can act a lot faster if you can get people preventing stuff from being built in the first place, and that means you need to have a culture of people who can see something and sound the alarm and go, ‘Wait a minute, hang on. That’s not okay.’
 Stephanie Hare on why we need a culture of technology ethics
 
@@ -185,52 +227,10 @@ Stephanie Hare on why we need a culture of technology ethics
 ::: {.listing-block}
 <a href="viewpoints/interviews/index.qmd">
 
-## Interviews
-</a> 
+## Interviews 
+</a>
 
 ::: {#interviews}
-:::
-
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="ideas/datasciencebites/index.qmd">
-
-## Data Science Bites 
-</a>
-
-::: {#datasciencebites}
-:::
-
-:::
-:::
-
-::: {.pullout-text}
-::: {.pullout-container}
-::: {.pullout-block .black-background}
-![](images/quote-purple.png){width="100px"}
-
-## As I’ve transitioned into management, maintaining my coding prowess is an ongoing challenge. I stay sharp by doing data science and infrastructure development for fun, leveraging tools like ChatGPT and AirOps where I’m rusty.
-Sami Rahman, head of data engineering and data platform at Penguin Random House
-
-::: {.button}
-[Read Sami's career profile](careers/career-profiles/posts/2023/04/24/sami-rahman.qmd)
-:::
-
-:::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="careers/career-profiles/index.qmd">
-
-## Career profiles 
-</a>
-
-::: {#career-profiles}
 :::
 
 :::
