added link to pt2

--- a/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd
+++ b/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd
@@ -28,6 +28,8 @@ Our interviewees, in order of appearance, are:
 
 The first part of our discussion focuses on how large language models are becoming part of the data science toolkit, and what this new development means for data science teams and skillsets. Stay tuned for part two, which we’ll be publishing soon!
 
+(**UPDATE:** Part two is now published: ["Large language models: Do we need to understand the maths, or simply recognise the limitations?"](/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd))
+
 ![](images/chatgpt-homescreen.png){fig-align="center" width="500px" fig-alt="Photo of ChatGPT homescreen, by Levart_Photographer on Unsplash."}
 
 **As data scientists, how has ChatGPT -- and other tools built on large language models (LLMs) -- changed your working lives?**
