--- a/viewpoints/interviews/posts/2023/06/08/london-data-week.qmd
+++ b/viewpoints/interviews/posts/2023/06/08/london-data-week.qmd
@@ -13,7 +13,7 @@ toc: false
 image: images/arthur-yao-HTicW9-i4xY-unsplash.png
 image-alt: Photo of London at night, with Big Ben clock tower towering over the city. Photo by Arthur Yao on Unsplash. 
 ---
-<!-- {{< video https://www.youtube.com/embed/Plga2ldbcTE >}} -->
+{{< video https://www.youtube.com/embed/nLzL-swPBgg >}}
 
 ## Transcript
 
